--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-scroll-to-top": "^1.0.5",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
